Fixed one css bleeding into another component

--- a/src/Pages/Country/index.scss
+++ b/src/Pages/Country/index.scss
@@ -45,7 +45,7 @@
             justify-content: space-around;
 
             .country-name {
-
+                height: auto;
                 text-align: center;
                 font-size: 30px;
             }
